[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4.9.0"
chrono="0.4.38" #handling dates and times
serde={version = "1.0.210",features = ["derive"]}
serde_json="1.0.128"
sha2="0.10.8"
tokio={version = "1.40.0",features = ["full"]}
log = "0.4.22"
env_logger = "0.11.5"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }